force-app/main/default/objects/Business_Case__c/Business_Case__c.object-meta.xml
<CustomObject>
    <description>Created for the JIRA: 2264</description>
    <label>Business Case</label>
    <nameField>
        <displayFormat>Item No-{0000000}</displayFormat>
        <label>Business Case</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>