force-app/main/default/objects/Business_Case__c/fields/Aligned_with_EK_sales__c.field-meta.xml
<CustomField>
    <fullName>Aligned_with_EK_sales__c</fullName>
    <inlineHelpText>If requesting outside guidelines on MCA and is a QF/EK joint ticketing customer, have you aligned with EK Sales?.</inlineHelpText>
    <label>Aligned with EK sales?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>