force-app/main/default/objects/Business_Case__c/fields/Cost_of_sale_Incremental_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_sale_Incremental_opportunity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost of sale &amp; Incremental opportunity</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>