force-app/main/default/objects/Business_Case__c/fields/Current_performance_in_the_route_s__c.field-meta.xml
<CustomField>
    <fullName>Current_performance_in_the_route_s__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the current performance in requested route(s)? Revenue, share and how significant is this route in relation to Trunk, Regional, International, Non-MCA or MCA spend?</inlineHelpText>
    <label>Current performance in the route(s)?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>