force-app/main/default/objects/Business_Case__c/fields/How_did_you_arrive_with_this_proposal__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_arrive_with_this_proposal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How did you arrive with this proposal?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>