force-app/main/default/objects/Business_Case__c/fields/Is_there_competitive_MI__c.field-meta.xml
<CustomField>
    <fullName>Is_there_competitive_MI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is customer&apos;s expectation?</inlineHelpText>
    <label>Is there competitive MI?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>