force-app/main/default/objects/Business_Case__c/fields/Requested_routes__c.field-meta.xml
<CustomField>
    <fullName>Requested_routes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested route(s)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>