force-app/main/default/objects/Business_Case__c/fields/Supplementary_Materials_Sharepoint_Link__c.field-meta.xml
<CustomField>
    <fullName>Supplementary_Materials_Sharepoint_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>For further information, refer to models and supporting documents saved on Sharepoint</inlineHelpText>
    <label>Supplementary Materials/Sharepoint Link</label>
    <type>Url</type>
</CustomField>