force-app/main/default/objects/Business_Case__c/fields/What_else_have_you_considered__c.field-meta.xml
<CustomField>
    <fullName>What_else_have_you_considered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Check the resulting net fares using the models.</inlineHelpText>
    <label>Do new disc maintain tariff hierarchy?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>