force-app/main/default/objects/Business_Case__c/fields/What_is_the_current_booking_mix__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_current_booking_mix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the current booking mix on the requested route(s)? Will booking mix change with new discounts?</inlineHelpText>
    <label>What is the current booking mix?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>